force-app/main/default/objects/RequestLogSetting__mdt/RequestLogSetting__mdt.object-meta.xml
<CustomObject>
    <label>Request Log Setting</label>
    <pluralLabel>Request Log Setting</pluralLabel>
</CustomObject>