force-app/main/default/objects/RequestLogSetting__mdt/fields/MaxAttemptNumber__c.field-meta.xml
<CustomField>
    <fullName>MaxAttemptNumber__c</fullName>
    <description>How many times a request should be resend after failure</description>
    <label>Max Attempt Number</label>
    <precision>1</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>