force-app/main/default/objects/RequestLogSetting__mdt/fields/MaxProductsPerRequest__c.field-meta.xml
<CustomField>
    <fullName>MaxProductsPerRequest__c</fullName>
    <description>Limit of product records in a single request</description>
    <label>Max Products Per Request</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>