force-app/main/default/objects/RequestLogSetting__mdt/fields/MaxRequestsPerBatch__c.field-meta.xml
<CustomField>
    <fullName>MaxRequestsPerBatch__c</fullName>
    <description>How many request should be send in a single batch</description>
    <label>Max Requests Per Batch</label>
    <precision>1</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>